# nrfx-blinky-meson

./: .gitmodules  LICENSE  README.md  cross_file.txt  meson.build
include/: nrfx_config.h  nrfx_glue.h
src/: blink.c  pca10056.h
